# Cubature_SDE

./: CMakeLists.txt  LICENSE  README.md
Approximation/: AdaptiveApproximation.h  CMakeLists.txt  LeastSquaresInterpolation.cpp  LeastSquaresInterpolation.h  LocalApproximation.cpp  LocalApproximation.h  MortonTree.cpp  MortonTree.h  MortonTreeApproximation.cpp  MortonTreeApproximation.h  MortonTreeOccupant.cpp  MortonTreeOccupant.h  SHOW.h  Utils.h
CommandLine/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  stdafx.cpp  versioninfo.cpp
Morton/: CMakeLists.txt  Learn.cpp  WeiTest.cpp  bitutilities.cpp  bitutilities.h  block.h  log_base2.h  lsplice.h  morton.h  smallest_int_type.h  splice_char.cpp  splice_lib.h  stdafx.cpp  stdafx.h  targetver.h  test.cpp  unblock.h  wpUtilities.h
PointReductionLib_use_dll/: ArrayOfpDoublesToVectorOfPowers.cpp  ArrayOfpDoublesToVectorOfPowers.h  CMakeLists.txt  CloudWeightLocation.cpp  CloudWeightLocation.h  CloudWeightLocation2D.cpp  CloudWeightLocation2D.h  DoAbstractPruning.cpp  DoAbstractPruning2D.cpp  DoAbstractPruningMultithreaded.cpp  RdToPowers.h  RdToPowers2.cpp  ToPowersData.h  stdafx.cpp  stdafx.h
libs/: BasketSpreadQuantLib.h  BlackScholesGreeks.cpp  BlackScholesGreeks.h  CMakeLists.txt  CubaturePDESolver.cpp  CubaturePDESolver.h  CubaturePDESolver2D.cpp  CubaturePDESolver2D.h  DebugTools.cpp  DebugTools.h  DoublePrecisionGaussianQuadrature.cpp  DoublePrecisionGaussianQuadrature.h  ErrorInCubature.cpp  ExactPDESolution.cpp  ExactPDESolution.h  GaussQuadratureSet.cpp  GaussQuadratureSet.h  GeometricBM.cpp  GeometricBM.h  MainProgramParameters.cpp  MainProgramParameters.h  OptionData.h  SharedFunctionsAndTypes.h  TARN.h  TARNClasses.h  TARNOptionData.h  TARNPricingFunctions.h  TARNTwoStepPDESolver.cpp  TARNTwoStepPDESolver.h  TemplateCubaturePDESolver.h  TerminalCondition.h  TheCommandLine.h  stdafx.h
pde01/: CMakeLists.txt  CubaturePDESolverNonVerboseWithAdditionalComputations.xls  LearnBlackScholes.cpp  QuadraturePoints10.txt  QuadraturePoints12.txt  QuadraturePoints14.txt  QuadraturePoints16.txt  QuadraturePoints18.txt  QuadraturePoints20.txt  ScopedWindowsPerformanceTimer.cpp  ScopedWindowsPerformanceTimer.h  TestTARN.cpp  TestTARNClass.cpp  benchmark.cpp  binary_recursion.cpp  csvfile.h  doubleheateq.cpp  resource.h  stdafx.cpp  stdafx.h  testQuantlib.cpp  testTARNTwoStep.cpp  testchebyshev.cpp  trapfpe.h
recombine/: BufferConstructor.h  CMakeLists.txt  Cmove1.cpp  Cmove1.h  LinearAlgebraReductionTool.h  ReadMe.txt  TreeBufferHelper.cpp  TreeBufferHelper.h  aligned_allocator.h  recombine.cpp  recombine.h  recombine1.cpp  recombine1.h  stdafx.h
